--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 }
 body{
     width: 500px;
+    margin: 0 auto;
 }
 .logo{
     width: 90%;
@@ -84,8 +85,56 @@ h3{
     margin-bottom: 70px;
 }
 .rosso{
-    height: 280px;
+    height: 320px;
     background-color:#e22d0e ;
+    color: white;
 }
+.rossoa{
+   padding-top: 50px;
+   padding-bottom: 30px;
+}
+.rossoa h4{
+    font-size: 2.0rem;
+    font-family: "montserrat", sans-serif;
+    font-weight: bold;
+}
+.rossob p{
+    text-align: center;
+    font-size: 0.8rem;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 30px;
+}
+.rossoc p{
+    font-size: 15px;
+    padding-bottom: 50px;
+}
+.pc-first{
+    margin-top: 70px;
+    border: 1px solid lightgray;
+    width: 440px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 40px;
+    border-radius: 5px;
+    height: 500px;
+}
+.titolo{
+    padding-top: 30px;
+}
+.pmid p{
+    font-size: 1rem;
+}
+.pc-second{
+    margin-top: 30px;
+    border: 1px solid lightgray;
+    width: 440px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 40px;
+    border-radius: 5px;
+    height: 500px;
+}
+
 
 
