--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header{
 h2{
     font-family: "montserrat", sans-serif;
     font-size: 2rem;
-    line-height: 1.5rem;
+    line-height: 40px;
 }
 .header{
     background-image:url(./images/banner.jpg);
