--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
     text-align: center;
 }
 body{
-    width: 500px;
+    width: 100%;
     margin: 0 auto;
 }
 .logo{
@@ -32,7 +32,7 @@ h2{
     line-height: 2rem;
 }
 .header{
-    background-image:url(./images/banner.jpg);
+    background-image:url(../images/banner.jpg);
     background-size: cover;
     height: 450px;
     background-repeat: no-repeat;   
