--- a/assets/style.css
+++ b/assets/style.css
@@ -11,11 +11,11 @@ body{
     margin: 0 auto;
 }
 .logo{
-    width: 90%;
+    width: 100%;
     height: 100px;
     text-align: center;
     background-color: black;
-    padding: 25px;
+    padding: 25px 0;
     vertical-align: middle;
 }
 .logo img{
